--- a/style.css
+++ b/style.css
@@ -293,6 +293,7 @@ p.underline {
   margin-left: auto;
   margin-right: auto;
   margin-top: 10vh;
+  margin-bottom: 14vh;
   width: 80%;
   border-radius: 40px;
   align-items: center;
@@ -561,7 +562,6 @@ p.underline {
     border-radius: 10px;
   }
   .prog-description {
-    display: none;
     max-width: 80%;
     padding-left: 10%;
     padding-right: 10%;
@@ -569,7 +569,7 @@ p.underline {
     font-size: 15px;
     color: #3b3b3b;
     text-align: center;
-    display: flex;
+    display: block;
     flex-direction: column;
     text-align: center;
     position: absolute;
@@ -577,7 +577,7 @@ p.underline {
     left: 0;
     width: 100%;
     opacity: 0;
-    display: flex;
+
   }
   .middle {
     display: none;
@@ -882,19 +882,11 @@ p.underline {
   #featured-mobile {
     display: none;
   }
-  #featured-container {
-    position: relative;
-    margin-left: auto;
-    margin-right: auto;
-    top: 60px;
-    width: 90%;
-    height: 700px;
-    border-radius: 40px;
-    align-items: center;
-    background: url(img/sectionback.webp);
-    background-repeat: no-repeat;
-    background-size: 100%;
+  .productsSelectButtons{
+    display: flex;
+    justify-content: center;
   }
+  
   #featured {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -1104,7 +1096,6 @@ p.underline {
     top: 12vh;
     width: 90%;
     height: 95vh;
-    margin-bottom: 10vh;
     margin-left: auto;
     margin-right: auto;
   }
@@ -1165,17 +1156,7 @@ p.underline {
     text-align: center;
     display: flex;
     position: relative;
-    opacity: 0;
-    display: flex;
-    transition: 0.7s ease;
-  }
-  .spacer1 {
-    width: 100%;
-    height: 2vh;
-  }
-  .spacer2 {
-    width: 100%;
-    height: 4vh;
+    display: block;
   }
   .prog-it-cont p {
     text-align: left;
@@ -1438,6 +1419,9 @@ p.underline {
   .chooseus-content {
     display: none;
   }
+  .productsSelectButtons{
+    display: none;
+  }
 
   .mindsetPicture1,
   .mindsetPicture2 {
@@ -1480,8 +1464,6 @@ p.underline {
 @media screen and (max-width: 768px) {
   .footer-desktop,
   .vl2,
-  .spacer1,
-  .spacer2,
   .underlineDLong,
   .underlineD {
     display: none;
