--- a/styleForPresets.css
+++ b/styleForPresets.css
@@ -37,6 +37,7 @@ h5 {
   margin-left: auto;
   margin-right: auto;
   position: relative;
+  padding-top: 20px;
 }
 .swipeText {
   position: absolute;
@@ -71,7 +72,10 @@ h5 {
   height: 420px;
   
 }
-
+.bouquetePart{
+  padding-left: 30px;
+  padding-top: 10px;
+}
 .presetPictureMobile {
   width: 80%;
 }
@@ -99,7 +103,6 @@ a:active {
 /* hiding mobile elements for Making desktop ver */
 @media screen and (min-width: 769px) {
   .carousel,
-  .presetPartsTextMobile,
   .sliderButtons,
   .shownProduct,
   .bouquetePart,
@@ -112,6 +115,9 @@ a:active {
   .btn1-light {
     width: 370px;
     max-height: 60px;
+  }
+  .contactMobile{
+    margin-bottom: 150px;
   }
 } /*  hiding DEsktop elements for  phone version*/
 @media screen and (max-width: 768px) {
